--- a/Zuck_small.not.ipynb
+++ b/Zuck_small.not.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -238,7 +238,7 @@
        "[24557 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "Zuck_small = \"C:/Users/Deivid/Downloads/Notebooks, caixote, indíces/Notebook Zuck_small(Concluido)/zuck_small.blocks/zuck_small.caixote.csv\"\n",
+    "Zuck_small = \"https://drive.google.com/uc?export=download&id=1OlBuzks5S4DFQC5PRyngfddEpE-5lKUQ\"\n",
     "\n",
     "blockmodel = pd.read_csv(Zuck_small, sep=',')\n",
     "\n",
